# pyfirstockconnect

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
examples/loginNProfile/: login.py  logout.py  userDetails.py
examples/marketConnect/: getIndexList.py  getOptionChain.py  getQuotes.py  getSecurityInfo.py  optionGreek.py  searchScrips.py  spanCalculator.py  timePriceSeries.py
examples/orderNReport/: basketMargin.py  cancelOrder.py  holdings.py  limits.py  modifyOrder.py  orderBook.py  orderMargin.py  placeOrder.py  positionBook.py  productConversion.py  singleOrderHistory.py  tradeBook.py
examples/strategies/: bearPutCall.py  bullCallSpread.py  longStraddle.py  longStrangle.py  multiPlaceOrder.py  shortStraddle.py  shortStrangle.py
src/test_firstock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/thefirstock/: exchange_socket.py  exchange_socket_copy.py  thefirstock.py
src/thefirstock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
thefirstock/Variables/: enums.py  fixedParams.py
thefirstock/firstockModules/: firstockWebSockets.py
thefirstock/loginNProfile/: loginFirstock.py  logoutFirstock.py  userDetailsFirstock.py
thefirstock/marketConnect/: getIndexListFirstock.py  getOptionChainFirstock.py  getQuotesFirstock.py  getSecurityInfoFirstock.py  optionGreekFirstock.py  searchScripsFirstock.py  spanCalculatorFirstock.py  timePriceSeriesFirstock.py
thefirstock/ordersNReport/: cancelOrderFirstock.py  limitFirstock.py  orderBookFirstock.py  orderMarginFirstock.py  positionBookFirstock.py  productConversionFirstock.py  (+2 more)
(+207 files in other folders)
