[metadata]
name = thefirstock
version = 1.0.0
author = Firstock
author_email = technology@thefirstock.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Finance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests
    ws4py
    pydantic
    pydantic[email]
    python-dateutil

[options.packages.find]
where = src
