[metadata]
name = thefirstock
version = 4.1.0
author = Firstock
author_email = technology@thefirstock.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests
    websockets
    asyncio

[options.packages.find]
where = src
